Bunch of ux fixes for modal on mobile for when they *can* edit the tracks

--- a/src/components/EditTrack/style.css
+++ b/src/components/EditTrack/style.css
@@ -10,10 +10,6 @@
 	width: 100%;
 }
 
-.form > div:first-of-type {
-	width: calc(100% - 200px) !important;
-}
-
 .form textarea {
 	max-height: 300px;
 }
@@ -64,4 +60,48 @@
 
 .form .upload-image:hover .icon {
 	opacity: 1;
+}
+
+.button {
+	width: 100%;
+	margin-top: 10px;
+	background: var(--floating-label-login-bg) !important;
+	color: white !important;
+	border-radius: 50px;
+	padding: 10px !important;
+}
+
+.form > div > div:not(.checkbox) {
+	display: none !important;
+}
+
+.form input, .form textarea {
+	background: var(--mdc-search-bg);
+	padding: 10px;
+	border: 0 !important;
+}
+
+.form > div {
+	border: none;
+}
+
+.form > div > label {
+	left: 10px;
+	bottom: 14px;
+}
+
+.form input {
+	border-radius: 50px;
+}
+
+@media screen and (max-width: 768px) {
+	.form .track-name {
+		width: 100% !important;
+	}
+}
+
+@media screen and (min-width: 768px) {
+	.form > div:first-of-type {
+		width: calc(100% - 200px) !important;
+	}
 }
