--- a/src/routes/profile/style.css
+++ b/src/routes/profile/style.css
@@ -109,3 +109,21 @@
 .username_custom i {
 	color: white;
 }
+
+.modalClose {
+    float: right;
+    cursor: pointer;
+    padding: 10px;
+    margin-top: -10px;
+    border-radius: 100%;
+}
+
+.modalClose:hover {
+    background: var(--mdc-search-bg);
+}
+
+@media screen and (min-width: 768px) {
+    .modalClose {
+        display: none;
+    }
+}
